--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Hotellisting_db; integrated security=true"
+  }
 }
